--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="project-subheading">Its is a car modification copany which provide you sheets to
                                 protect your car from scratch</div>
                             <div class="btn-group">
-                                <div class="btn-pink btn-project">Read More</div>
+                                <div class="btn-pink">Read More</div>
                                 <a href="">
                                     <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                                 </a>
@@ -107,7 +107,7 @@
                             <div class="project-subheading">Its is a car modification copany which provide you sheets to
                                 protect your car from scratch</div>
                             <div class="btn-group">
-                                <div class="btn-pink btn-project">Read More</div>
+                                <div class="btn-pink">Read More</div>
                                 <a href="">
                                     <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                                 </a>
@@ -136,7 +136,7 @@
                             <div class="project-subheading">Its is a car modification copany which provide you sheets to
                                 protect your car from scratch</div>
                             <div class="btn-group">
-                                <div class="btn-pink btn-project">Read More</div>
+                                <div class="btn-pink">Read More</div>
                                 <a href="">
                                     <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                                 </a>
@@ -165,7 +165,7 @@
                             <div class="project-subheading">Its is a car modification copany which provide you sheets to
                                 protect your car from scratch</div>
                             <div class="btn-group">
-                                <div class="btn-pink btn-project">Read More</div>
+                                <div class="btn-pink">Read More</div>
                                 <a href="">
                                     <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                                 </a>
